--- a/testTetris2.html
+++ b/testTetris2.html
@@ -13,5 +13,5 @@
 <body>
     <canvas id="monCanevas" width="400" height="800"></canvas>
 </body>
-<script src="testTetris.js"></script>
+<script src="testTetris2.js"></script>
 </html>
